--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,11 @@ bytes = "1.1.0"
 bincode = "1.3.3"
 byteorder = "1.4.3"
 ansi_term = "0.12.1"
+redis = "*"
+uuid = { version = "0.8.2", features = ["v4"] }
+serde_json = "*"
+serde = {version = "*", features = ["derive"]}
+
 
 [dependencies.tokio]
 version = "1.16.1"
